--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -10,9 +10,9 @@
                                 <app-feather-icons [icon]="'navigation'" class="font-warning"></app-feather-icons>
                             </div>
                         </div>
-                        <div class="media-body col-8"><span class="m-0">Earnings</span>
-                            <h3 class="mb-0">$ <span class="counter" [CountTo]="6659" [from]="0"
-                                    [duration]="2">6659</span><small> This Month</small></h3>
+                        <div class="media-body col-8"><span class="m-0">Ganancias</span>
+                            <h3 class="mb-0">$ <span class="counter" [CountTo]="0" [from]="0"
+                                    [duration]="2">0</span><small> Este Mes</small></h3>
                         </div>
                     </div>
                 </div>
@@ -27,9 +27,9 @@
                                 <app-feather-icons [icon]="'box'" class="font-secondary"></app-feather-icons>
                             </div>
                         </div>
-                        <div class="media-body col-8"><span class="m-0">Products</span>
-                            <h3 class="mb-0">$ <span class="counter" [CountTo]="9856" [from]="0"
-                                    [duration]="2">9856</span><small> This Month</small></h3>
+                        <div class="media-body col-8"><span class="m-0">Productos</span>
+                            <h3 class="mb-0">$ <span class="counter" [CountTo]="0" [from]="0"
+                                    [duration]="2">0</span><small> Este Mes</small></h3>
                         </div>
                     </div>
                 </div>
@@ -44,15 +44,15 @@
                                 <app-feather-icons [icon]="'message-square'" class="font-primary"></app-feather-icons>
                             </div>
                         </div>
-                        <div class="media-body col-8"><span class="m-0">Messages</span>
-                            <h3 class="mb-0">$ <span class="counter" [CountTo]="893" [from]="0"
-                                    [duration]="2">893</span><small> This Month</small></h3>
+                        <div class="media-body col-8"><span class="m-0">Mensajes</span>
+                            <h3 class="mb-0">$ <span class="counter" [CountTo]="0" [from]="0"
+                                    [duration]="2">0</span><small> Este Mes</small></h3>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-xl-3 col-md-6 xl-50">
+        <!-- <div class="col-xl-3 col-md-6 xl-50">
             <div class="card o-hidden widget-cards">
                 <div class="bg-danger card-body">
                     <div class="media static-top-widget row">
@@ -62,14 +62,14 @@
                             </div>
                         </div>
                         <div class="media-body col-8"><span class="m-0">New Vendors</span>
-                            <h3 class="mb-0">$ <span class="counter" [CountTo]="45631" [from]="0"
-                                    [duration]="2">45631</span><small> This Month</small></h3>
+                            <h3 class="mb-0">$ <span class="counter" [CountTo]="0" [from]="0"
+                                    [duration]="2">0</span><small> Este Mes</small></h3>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-6 xl-100">
+        </div> -->
+        <!-- <div class="col-xl-6 xl-100">
             <div class="card">
                 <div class="card-header">
                     <h5>Market Value</h5>
@@ -82,8 +82,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-6 xl-100">
+        </div> -->
+        <!-- <div class="col-xl-6 xl-100">
             <div class="card">
                 <div class="card-header">
                     <h5>Latest Orders</h5>
@@ -136,8 +136,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-3 col-md-6 xl-50">
+        </div> -->
+        <!-- <div class="col-xl-3 col-md-6 xl-50">
             <div class="card order-graph sales-carousel">
                 <div class="card-header">
                     <h6>Total Sales</h6>
@@ -176,8 +176,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-3 col-md-6 xl-50">
+        </div> -->
+        <!-- <div class="col-xl-3 col-md-6 xl-50">
             <div class="card order-graph sales-carousel">
                 <div class="card-header">
                     <h6>Total purchase</h6>
@@ -215,8 +215,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-3 col-md-6 xl-50">
+        </div> -->
+        <!-- <div class="col-xl-3 col-md-6 xl-50">
             <div class="card order-graph sales-carousel">
                 <div class="card-header">
                     <h6>Total cash transaction</h6>
@@ -254,8 +254,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-3 col-md-6 xl-50">
+        </div> -->
+        <!-- <div class="col-xl-3 col-md-6 xl-50">
             <div class="card order-graph sales-carousel">
                 <div class="card-header">
                     <h6>Daily Deposits</h6>
@@ -293,8 +293,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-12">
+        </div> -->
+        <!-- <div class="col-sm-12">
             <div class="card">
                 <div class="card-header">
                     <h5>Buy / Sell</h5>
@@ -306,8 +306,8 @@
                         (chartClick)="chartClicked($event)"></canvas>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-6 xl-100">
+        </div> -->
+        <!-- <div class="col-xl-6 xl-100">
             <div class="card height-equal">
                 <div class="card-header">
                     <h5>Products Cart</h5>
@@ -371,8 +371,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-6 xl-100">
+        </div> -->
+        <!-- <div class="col-xl-6 xl-100">
             <div class="card height-equal">
                 <div class="card-header">
                     <h5>Empolyee Status</h5>
@@ -510,8 +510,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-12">
+        </div> -->
+        <!-- <div class="col-sm-12">
             <div class="card">
                 <div class="card-header">
                     <h5>Sales Status</h5>
@@ -620,7 +620,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 </div>
