--- a/src/app/components/products/physical/category/category.component.html
+++ b/src/app/components/products/physical/category/category.component.html
@@ -4,15 +4,15 @@
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header">
-                    <h5>Products Category</h5>
+                    <h5>Categoría de productos</h5>
                 </div>
                 <div class="card-body">
                     <div class="btn-popup pull-right">
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-original-title="test"
-                            data-target="#exampleModal" (click)="open(content)">Add Category</button>
+                            data-target="#exampleModal" (click)="open(content)">Agregar Categorias</button>
                         <ng-template #content let-modal>
                             <div class="modal-header">
-                                <h5 class="modal-title f-w-600" id="exampleModalLabel">Add Physical Product</h5>
+                                <h5 class="modal-title f-w-600" id="exampleModalLabel">Agregar Producto</h5>
                                 <button type="button" class="close" aria-label="Close"
                                     (click)="modal.dismiss('Cross click')">
                                     <span aria-hidden="true">&times;</span>
