--- a/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -4,7 +4,7 @@
             <div class="col-lg-6">
                 <div class="page-header-left">
                     <h3>{{title}}
-                        <small>Multikart Admin panel</small>
+                        <small>Cofresca Admin panel</small>
                     </h3>
                 </div>
             </div>
