--- a/src/app/components/products/physical/product-list/product-list.component.html
+++ b/src/app/components/products/physical/product-list/product-list.component.html
@@ -25,17 +25,17 @@
                         </div>
                     </div>
                     <div class="product-detail">
-                        <div class="rating"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
-                                class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
+                        <!-- <div class="rating"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i
+                                class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div> -->
                         <a href="javascript:void(0)">
                             <h6>{{product.product_title}}</h6>
                         </a>
-                        <h4>{{product.discount}} <del>{{product.price}}</del></h4>
-                        <ul class="color-variant">
+                        <h4>{{product.price}}</h4>
+                        <!-- <ul class="color-variant">
                             <li class="bg-light0"></li>
                             <li class="bg-light1"></li>
                             <li class="bg-light2"></li>
-                        </ul>
+                        </ul> -->
                     </div>
                 </div>
             </div>
