--- a/src/app/components/products/physical/sub-category/sub-category.component.html
+++ b/src/app/components/products/physical/sub-category/sub-category.component.html
@@ -4,12 +4,12 @@
         <div class="col-sm-12">
             <div class="card">
                 <div class="card-header">
-                    <h5>Products Sub Category</h5>
+                    <h5>Subcategoría de productos</h5>
                 </div>
                 <div class="card-body">
                     <div class="btn-popup pull-right">
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-original-title="test"
-                            data-target="#exampleModal" (click)="open(content)">Add Sub Category</button>
+                            data-target="#exampleModal" (click)="open(content)">Añadir subcategoría</button>
                         <ng-template #content let-modal>
                             <div class="modal-header">
                                 <h5 class="modal-title f-w-600" id="exampleModalLabel">Add Physical Product</h5>
@@ -22,20 +22,20 @@
                                 <form class="needs-validation">
                                     <div class="form">
                                         <div class="form-group">
-                                            <label for="validationCustom01" class="mb-1">Sub Category Name :</label>
+                                            <label for="validationCustom01" class="mb-1">Nombre de la subcategoría :</label>
                                             <input class="form-control" id="validationCustom01" type="text">
                                         </div>
                                         <div class="form-group mb-0">
-                                            <label for="validationCustom02" class="mb-1">Sub Category Image :</label>
+                                            <label for="validationCustom02" class="mb-1">Subcategoría Imagen :</label>
                                             <input class="form-control" id="validationCustom02" type="file">
                                         </div>
                                     </div>
                                 </form>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-primary" >Save</button>
+                                <button type="button" class="btn btn-primary" >Guardar</button>
                                 <button class="btn btn-secondary" type="button" data-dismiss="modal"
-                                    (click)="modal.dismiss('Cross click')">Close</button>
+                                    (click)="modal.dismiss('Cross click')">Cerrar</button>
                             </div>
                         </ng-template>
                     </div>
