--- a/src/app/components/setting/profile/profile.component.html
+++ b/src/app/components/setting/profile/profile.component.html
@@ -7,9 +7,9 @@
                     <div class="profile-details text-center">
                         <img src="assets/images/dashboard/designer.jpg" alt=""
                             class="img-fluid img-90 rounded-circle blur-up lazyloaded">
-                        <h5 class="f-w-600 mb-0">John deo</h5>
-                        <span>johndeo@gmail.com</span>
-                        <div class="social">
+                        <h5 class="f-w-600 mb-0">Cofresca</h5>
+                        <span>info@cofresca.com</span>
+                        <!-- <div class="social">
                             <div class="form-group btn-showcase">
                                 <button class="btn social-btn btn-fb d-inline-block">
                                     <i class="fa fa-facebook"></i></button>
@@ -18,11 +18,11 @@
                                 <button class="btn social-btn btn-google d-inline-block mr-0"><i
                                         class="fa fa-twitter"></i></button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <hr>
-                    <div class="project-status">
-                        <h5 class="f-w-600">Employee Status</h5>
+                    <!-- <div class="project-status">
+                        <h5 class="f-w-600">Estado de los empleados</h5>
                         <div class="media">
                             <div class="media-body">
                                 <h6>Performance<span class="pull-right">80%</span></h6>
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
