--- a/src/app/components/users/list-user/list-user.component.html
+++ b/src/app/components/users/list-user/list-user.component.html
@@ -2,11 +2,11 @@
 <div class="container-fluid">
     <div class="card">
         <div class="card-header">
-            <h5>User Details</h5>
+            <h5>Detalles del usuario</h5>
         </div>
         <div class="card-body">
             <div class="btn-popup pull-right">
-                <a class="btn btn-secondary" [routerLink]="'/users/create-user'">Create User</a>
+                <a class="btn btn-secondary" [routerLink]="'/users/create-user'">Crear Usuario</a>
             </div>
             <div id="batchDelete" class="category-table custom-datatable transcation-datatable user-image">
                 <div class="table-responsive">
