--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -6,8 +6,8 @@
   <div class="sidebar-user text-center">
     <div><img class="img-60 rounded-circle" src="assets/images/dashboard/man.png" alt="#">
     </div>
-    <h6 class="mt-3 f-14">JOHN</h6>
-    <p>general manager.</p>
+    <h6 class="mt-3 f-14">Cofresca</h6>
+    <p>Administrador.</p>
   </div>
   <ul class="sidebar-menu">
     <li *ngFor="let menuItem of menuItems" [ngClass]="{active: menuItem.active}">
