--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -51,19 +51,19 @@
                                             <form (ngSubmit)="login()" class="form-horizontal auth-form" novalidate="">
                                                 <div class="form-group">
                                                     <input required="" name="login[username]" [(ngModel)]="username"
-                                                        type="email" class="form-control" placeholder="Username"
+                                                        type="email" class="form-control" placeholder="Usuario"
                                                         id="exampleInputEmail1">
                                                 </div>
                                                 <div class="form-group">
                                                     <input required="" name="login[password]" [(ngModel)]="password"
-                                                        type="password" class="form-control" placeholder="Password">
+                                                        type="password" class="form-control" placeholder="Clave">
                                                 </div>
                                                 <div class="form-terms">
                                                     <div class="custom-control custom-checkbox mr-sm-2">
                                                         <input type="checkbox" class="custom-control-input"
                                                             id="customControlAutosizing">
                                                         <label class="custom-control-label"
-                                                            for="customControlAutosizing">Remember me</label>
+                                                            for="customControlAutosizing">Recordar</label>
                                                         <a href="javascript:void(0)"
                                                             class="btn btn-default forgot-pass">Olvide mi clave</a>
                                                     </div>
@@ -82,20 +82,20 @@
                                             <form (ngSubmit)="login()" class="form-horizontal auth-form" novalidate>
                                                 <div class="form-group">
                                                     <input required="" name="login[username]" type="email"
-                                                        class="form-control" placeholder="Username"
+                                                        class="form-control" placeholder="Usuario"
                                                         [(ngModel)]="username" id="exampleInputEmail12">
                                                 </div>
                                                 <div class="form-group">
                                                     <input required="" name="login[password]" [(ngModel)]="password"
-                                                        type="password" class="form-control" placeholder="Password">
+                                                        type="password" class="form-control" placeholder="Clave">
                                                 </div>
                                                 <div class="form-terms">
                                                     <div class="custom-control custom-checkbox mr-sm-2">
                                                         <input type="checkbox" class="custom-control-input"
                                                             id="customControlAutosizing1">
                                                         <label class="custom-control-label"
-                                                            for="customControlAutosizing1"><span>I agree all statements
-                                                                in <a href="javascript:void(0)" class="pull-right">Terms
+                                                            for="customControlAutosizing1"><span>Estoy de acuerdo con todas las declaraciones
+                                                                en  <a href="javascript:void(0)" class="pull-right">Terms
                                                                     &amp;
                                                                     Conditions</a></span></label>
                                                     </div>
