--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6 footer-copyright">
-            <p class="mb-0">Copyright 2019 © Multikart All rights reserved.</p>
+            <p><i class="fa fa-copyright" aria-hidden="true"></i> {{ today | date:'y'}} Cofresca</p>
         </div>
         <div class="col-md-6">
-            <p class="pull-right mb-0">Hand crafted & made with<i class="fa fa-heart"></i></p>
+            <p class="pull-right mb-0">Cofresca< i class="fa fa-heart"></i></p>
         </div>
     </div>
 </div>
